--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"gh-pages": "^4.0.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-kakao-maps-sdk": "^1.1.5",
 		"react-scripts": "5.0.1",
 		"web-vitals": "^2.1.4"
 	},
