--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^13.5.0",
 		"gh-pages": "^4.0.0",
+		"moment": "^2.29.4",
 		"react": "^18.2.0",
+		"react-calendar": "^4.0.0",
 		"react-dom": "^18.2.0",
 		"react-kakao-maps-sdk": "^1.1.5",
 		"react-scripts": "5.0.1",
